--- a/VertxFirstProject/pom.xml
+++ b/VertxFirstProject/pom.xml
@@ -10,6 +10,7 @@
  
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<start-class>com.lakshmi.boot.SpringBootReactApplication</start-class>
 		<java.version>1.8</java.version>
 	</properties>
 
